<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Tabata</string>
    <string name="hello_world">Hello world!</string>
    <string name="exercises">Exercises:</string>
    <string name="duration">Exercise duration:</string>
    <string name="rest">Rest duration:</string>
    <string name="rounds">Rounds:</string>
    <string name="btn_next">Next</string>
    <string name="btn_start">Start</string>
    <string name="action_settings">Settings</string>

    <string-array name="exercise_spinner">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="duration_spinner">
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="rest_spinner">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    <string-array name="rounds_spinner">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="title_activity_second_screen">SecondScreen</string>

</resources>